[gd_scene load_steps=7 format=3 uid="uid://b4koex2j17meo"]

[ext_resource type="Theme" uid="uid://bp5vfv8jgvon8" path="res://maps/contract_them.tres" id="1_krppj"]
[ext_resource type="PackedScene" uid="uid://bfow8rs7ma88h" path="res://demerit_retry_icons.tscn" id="2_7jyyn"]
[ext_resource type="Script" uid="uid://cs6jqn7rx4ry5" path="res://scripts/results.gd" id="2_krppj"]
[ext_resource type="Script" uid="uid://bl13daggbvw4g" path="res://rank.gd" id="3_5erdf"]
[ext_resource type="Texture2D" uid="uid://bgxd688aom8im" path="res://art/ui/retry_token.png" id="4_ph8o5"]
[ext_resource type="Texture2D" uid="uid://dmc70oiqn76es" path="res://art/ui/demerit.png" id="5_7jyyn"]

[node name="results_panel" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -160.0
offset_right = -320.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_krppj")

[node name="demerit_retry_icons" parent="." instance=ExtResource("2_7jyyn")]
position = Vector2(0, 2)

[node name="results_panel" type="Panel" parent="."]
z_index = 2
custom_minimum_size = Vector2(1200, 1200)
layout_direction = 1
layout_mode = 1
offset_right = 1338.0
offset_bottom = 1395.0
theme = ExtResource("1_krppj")

[node name="MarginContainer" type="MarginContainer" parent="results_panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -486.5
offset_top = -634.0
offset_right = 486.5
offset_bottom = 634.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_krppj")

[node name="VBoxContainer" type="VBoxContainer" parent="results_panel/MarginContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
theme = ExtResource("1_krppj")

[node name="HBoxContainer" type="HBoxContainer" parent="results_panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_constants/separation = 66

[node name="RetryToken" type="Sprite2D" parent="results_panel/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
z_index = 10
position = Vector2(-30.5, 226.5)
scale = Vector2(2, 2)
texture = ExtResource("4_ph8o5")

[node name="RetryToken2" type="Sprite2D" parent="results_panel/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
z_index = 10
position = Vector2(133.5, 229.5)
scale = Vector2(2, 2)
texture = ExtResource("4_ph8o5")

[node name="RetryToken3" type="Sprite2D" parent="results_panel/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
z_index = 10
position = Vector2(295.5, 228.5)
scale = Vector2(2, 2)
texture = ExtResource("4_ph8o5")

[node name="Demerit" type="Sprite2D" parent="results_panel/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
z_index = 10
position = Vector2(-26.5, 58.5)
scale = Vector2(2, 2)
texture = ExtResource("5_7jyyn")

[node name="Demerit2" type="Sprite2D" parent="results_panel/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
z_index = 10
position = Vector2(130.5, 56.5)
scale = Vector2(2, 2)
texture = ExtResource("5_7jyyn")

[node name="title" type="Label" parent="results_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Results"
horizontal_alignment = 1

[node name="outcome" type="Label" parent="results_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
autowrap_mode = 2

[node name="time_remaining" type="Label" parent="results_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/paragraph_spacing = 0
theme_override_font_sizes/font_size = 80
text = "
"
vertical_alignment = 1
autowrap_mode = 2

[node name="you_lost" type="Label" parent="results_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/paragraph_spacing = 0
theme_override_font_sizes/font_size = 80
vertical_alignment = 1
autowrap_mode = 2

[node name="rank" type="Label" parent="results_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
autowrap_mode = 2
script = ExtResource("3_5erdf")

[node name="feedback_text" type="Label" parent="results_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "\"C\": \"Below Standards Citizen #9243.Demerit Recieved.\""
autowrap_mode = 2

[node name="main_button" type="Button" parent="results_panel"]
layout_mode = 0
offset_left = -112.0
offset_top = 1054.0
offset_right = 861.0
offset_bottom = 1134.0
theme = ExtResource("1_krppj")
text = "> Continue"

[node name="retry_button" type="Button" parent="results_panel"]
layout_mode = 0
offset_left = 219.0
offset_top = 1146.0
offset_right = 754.0
offset_bottom = 1239.0
text = "> Use Retry Token"
